fixed some typos

--- a/Housing Prices Regression/Housing_Prices.ipynb
+++ b/Housing Prices Regression/Housing_Prices.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Prices problem\n",
+    "# Housing Prices Problem\n",
     "\n",
-    "Using regression to predict house prices based on several variables. \n",
+    "The goal of this notebook is to use regression to predict house prices based on several variables. \n",
     "\n",
     "Data set avalable here: https://www.kaggle.com/harlfoxem/housesalesprediction#kc_house_data.csv"
    ]
@@ -1109,7 +1109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclustion:\n",
+    "### Conclusion:\n",
     "\n",
     "After testing several models: linear regression with one and several variables and random forest, we conclude that random forest model is the best solution here, as it gives best testing score (0.757)."
    ]
